--- a/nodnsleakjh251028.ini
+++ b/nodnsleakjh251028.ini
@@ -16,7 +16,7 @@ ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=📹 油管视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
-ruleset=📲 X电报DC,https://raw.githubusercontent.com/arb989822/xxxxx/main/Telegram.list
+ruleset=📲 X电报DC,https://raw.githubusercontent.com/arb989822/demo/refs/heads/main/Telegram.list
 ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
 ruleset=📢 谷歌🇨🇳,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
 ruleset=📢 谷歌🇨🇳,[]DOMAIN-SUFFIX,services.googleapis.cn
@@ -42,11 +42,11 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ; ================= 节点分组（保持原名，仅优化测速频率与模式） =================
 
 custom_proxy_group=💰 币交易所`url-test`(交易)`http://www.gstatic.com/generate_204`30,,50
-custom_proxy_group=📲 X电报DC`fallback`(日本|法国)`http://www.gstatic.com/generate_204`30,,50
+custom_proxy_group=📲 X电报DC`fallback`(社交)`http://www.gstatic.com/generate_204`30,,50
 custom_proxy_group=📹 油管视频`load-balance``round-robin`(油管)`http://www.gstatic.com/generate_204`300,50
 custom_proxy_group=💸 提法币`url-test`(法国)`http://www.gstatic.com/generate_204`30,,50
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
-custom_proxy_group=♻️ 自动选择`url-test`(法国|美国|日本)`http://www.gstatic.com/generate_204`30,,50
+custom_proxy_group=♻️ 自动选择`url-test`(法国|美国|日本|新加坡)`http://www.gstatic.com/generate_204`30,,50
 custom_proxy_group=📢 谷歌Block`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`.*
 custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*
 custom_proxy_group=📢 谷歌🇨🇳`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`.*
