--- a/OpenClashFake20251029.ini
+++ b/OpenClashFake20251029.ini
@@ -1,10 +1,13 @@
-[custom]
-; ====== OpenClash 激进优化订阅配置（保留指定四组不动 + 进一步合并精简其它规则/分组） ======
+optimized_ini_content = """[custom]
+; ====== OpenClash 精简优化订阅（保留核心分组 + Fake-IP + 30秒测速）======
+; ✅ 保留：币交易所 / X电报DC / 油管视频 / 提法币
+; ✅ 精简：合并冗余分组、统一自动选择、减少层级
+; ===============================================================
 
 enable_rule_generator=true
 overwrite_original_rules=true
 
-; ====================== DNS 设置（保留 Fake-IP 模式并精简 nameserver 列表） ======================
+; ====================== DNS 设置（Fake-IP 防泄漏）======================
 dns:
   enable: true
   ipv6: false
@@ -27,61 +30,86 @@ dns:
   nameserver:
     - https://1.1.1.1/dns-query
     - https://8.8.8.8/dns-query
+    - https://223.5.5.5/dns-query
   fallback:
     - https://1.0.0.1/dns-query
     - https://9.9.9.9/dns-query
 
-; ====================== Ruleset（严格保留四组不动，其它合并与去重） ====================== 
-
-; --- 必须保留且不要动的四组（逐字保留） ---
+; --- 优先规则 ---
 ruleset=💰 币交易所,https://raw.githubusercontent.com/arb989822/bnok/refs/heads/main/BNOK.list
 ruleset=💸 提法币,https://raw.githubusercontent.com/arb989822/bnok/refs/heads/main/cex.list
-ruleset=📹 油管视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
-ruleset=📲 X电报DC,https://raw.githubusercontent.com/arb989822/demo/refs/heads/main/Telegram.list
-
-; --- 保留必要的过滤与净化规则（合并同类，删除重复） ---
 ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 
-; --- 合并与精简后的服务/平台规则（减少重复来源，仅保留覆盖面广的列表） ---
-ruleset=📢 谷歌,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list
-ruleset=📢 谷歌🇨🇳,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCN.list
+; --- 常规规则 ---
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+ruleset=📹 油管视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
+ruleset=📲 X电报DC,https://raw.githubusercontent.com/arb989822/demo/refs/heads/main/Telegram.list
 ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
-ruleset=Ⓜ️ 微软服务合集,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
+ruleset=📢 谷歌🇨🇳,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
+ruleset=📢 谷歌🇨🇳,[]DOMAIN-SUFFIX,services.googleapis.cn
+ruleset=📢 谷歌Block,[]DOMAIN-SUFFIX,developer.android.google.cn
+ruleset=📢 谷歌🇨🇳,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
+ruleset=📢 谷歌🇨🇳,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCN.list
+ruleset=📢 谷歌,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list
+ruleset=Ⓜ️ 微软Bing,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Bing.list
+ruleset=Ⓜ️ 微软云盘,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
+ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 ruleset=💬 OpenAi,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
-
-; --- 媒体 / 平台（保留主要媒体规则，合并流媒体相关） ---
-ruleset=🎥 流媒体与视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
+ruleset=🎥 奈飞视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
 ruleset=🌏 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-
-; --- 节点 / 白名单 / 漏网 ---
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
-ruleset=🎯 中国域名白名单,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
-ruleset=🎯 GEOIP_CN,[]GEOIP,CN
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-; ================= 节点分组（保留四组原样不动，其它合并成更少、更一致的分组） =================
+; ================= 核心分组（完全保留）=================
 
-; --- 必须保留且不要动的四组（逐字保留，不改任何参数） ---
 custom_proxy_group=💰 币交易所`url-test`(交易)`http://www.gstatic.com/generate_204`30,,50
 custom_proxy_group=📲 X电报DC`fallback`(社交|备用)`http://www.gstatic.com/generate_204`30,,50
 custom_proxy_group=📹 油管视频`load-balance``round-robin`(油管)`http://www.gstatic.com/generate_204`300,50
 custom_proxy_group=💸 提法币`url-test`(法国)`http://www.gstatic.com/generate_204`30,,50
 
-; --- 精简后通用分组：减少分组数量并统一测速策略（默认 url-test 30s, timeout 50） ---
-custom_proxy_group=🚀 节点选择`url-test`(自动选择|节点测试)`http://www.gstatic.com/generate_204`30,,50
-custom_proxy_group=♻️ 自动选择`url-test`(自动)`http://www.gstatic.com/generate_204`30,,50
+; ================= 精简分组（统一自动选择）=================
 
-; --- 针对媒体/流量优化的合并分组（用于流媒体/大流量应用） ---
-custom_proxy_group=🎥 媒体加速`load-balance``round-robin`(流媒体)`http://www.gstatic.com/generate_204`120,50
+custom_proxy_group=♻️ 自动选择`url-test`(法国|美国|日本)`http://www.gstatic.com/generate_204`30,,50
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
 
-; --- 系统/功能性分组（拒绝/直连常用） ---
+; --- 谷歌系列（统一）---
+custom_proxy_group=📢 谷歌`select`[]🚀 节点选择`[]♻️ 自动选择`.*
+custom_proxy_group=📢 谷歌🇨🇳`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`.*
+custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*
+custom_proxy_group=📢 谷歌Block`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`.*
+
+; --- 微软 / 苹果 / OpenAI / 游戏 / 奈飞（统一策略）---
+custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
+custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
+custom_proxy_group=💬 OpenAi`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
+custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
+custom_proxy_group=🎥 奈飞视频`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
+
+; --- 国内媒体 / 哔哩哔哩（优先直连）---
+custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`.*
+custom_proxy_group=🌏 国内媒体`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`.*
+
+; --- 国外媒体 ---
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*
+
+; --- 基础分组 ---
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*
+"""
 
-; --- 最后兜底分组，保留漏网之鱼策略 --- 
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 中国域名白名单`[]DIRECT`.*
+# 写入文件
+output_path_ini = "/mnt/data/nodnsleakjh91-精简优化版.ini"
+with open(output_path_ini, "w", encoding="utf-8") as f:
+    f.write(optimized_ini_content.strip())
+
+print(f"精简优化版已保存至：{output_path_ini}")
