--- a/OpenClashFake20251028.ini
+++ b/OpenClashFake20251028.ini
@@ -42,6 +42,7 @@ overwrite_original_rules=true
 ; --- 💰 币交易所 & 法币 优先匹配 ---
 ruleset=💰 币交易所,https://raw.githubusercontent.com/arb989822/bnok/refs/heads/main/BNOK.list
 ruleset=💸 提法币,https://raw.githubusercontent.com/arb989822/bnok/refs/heads/main/cex.list
+ruleset=📹 油管视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 
 ; --- 广告与净化 ---
 ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
@@ -50,7 +51,6 @@ ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ; --- 常规规则 ---
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
-ruleset=📹 油管视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ruleset=📲 X电报DC,https://raw.githubusercontent.com/arb989822/demo/refs/heads/main/Telegram.list
 ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
 ruleset=📢 谷歌🇨🇳,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
@@ -78,7 +78,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=💰 币交易所`url-test`(交易)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=📲 X电报DC`url-test`(社交|备用)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=📹 油管视频`url-test`(交易)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=📹 油管视频`load-balance``round-robin`(油管)`http://www.gstatic.com/generate_204`300,50
 custom_proxy_group=💸 提法币`url-test`(备用)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
 custom_proxy_group=♻️ 自动选择`url-test`(备用|油管|社交)`http://www.gstatic.com/generate_204`300,,50
