--- a/OpenClashFake20251029.ini
+++ b/OpenClashFake20251029.ini
@@ -1,13 +1,12 @@
-optimized_ini_content = """[custom]
-; ====== OpenClash 精简优化订阅（保留核心分组 + Fake-IP + 30秒测速）======
-; ✅ 保留：币交易所 / X电报DC / 油管视频 / 提法币
-; ✅ 精简：合并冗余分组、统一自动选择、减少层级
-; ===============================================================
+[custom]
+; ====== OpenClash 终极优化订阅模板（Fake-IP + 防 DNS 泄漏 + 30秒自动测速）======
+; 适用于机场订阅转换，保留原始节点名与关键字，仅优化配置逻辑
+; ========================================================================
 
 enable_rule_generator=true
 overwrite_original_rules=true
 
-; ====================== DNS 设置（Fake-IP 防泄漏）======================
+# ====================== DNS 设置（Fake-IP 模式，防泄漏最优解）======================
 dns:
   enable: true
   ipv6: false
@@ -16,35 +15,52 @@ dns:
   fake-ip-range: 198.18.0.1/16
   fake-ip-filter:
     - '*.lan'
+    - '*.local'
+    - '*.home'
     - 'stun.*'
     - 'time.*'
-    - '*.apple.com'
-    - '*.msftconnecttest.com'
-    - '*.msftncsi.com'
-    - '*.battlenet.com.cn'
-    - '*.qq.com'
-    - '*.weixin.qq.com'
+    - 'localhost'
+    - '+.apple.com'
+    - '+.crashlytics.com'
+    - '+.msftconnecttest.com'
+    - '+.msftncsi.com'
+    - '+.battlenet.com.cn'
+    - '+.qq.com'
+    - '+.weixin.qq.com'
+    - '+.tencent.com'
   default-nameserver:
     - 223.5.5.5
     - 119.29.29.29
+    - 114.114.114.114
   nameserver:
-    - https://1.1.1.1/dns-query
-    - https://8.8.8.8/dns-query
-    - https://223.5.5.5/dns-query
+    - https://1.1.1.1/dns-query#PROXY
+    - https://8.8.8.8/dns-query#PROXY
+    - https://dns.alidns.com/dns-query#PROXY
   fallback:
-    - https://1.0.0.1/dns-query
-    - https://9.9.9.9/dns-query
+    - https://1.0.0.1/dns-query#PROXY
+    - https://9.9.9.9/dns-query#PROXY
+    - https://223.5.5.5/dns-query#DIRECT
+  fallback-filter:
+    geoip: false
+    ipcidr:
+      - 240.0.0.0/4
+      - 0.0.0.0/32
 
-; --- 优先规则 ---
+# ====================== 规则集（按优先级从高到低）======================
+# 币圈专用（最优先）
 ruleset=💰 币交易所,https://raw.githubusercontent.com/arb989822/bnok/refs/heads/main/BNOK.list
 ruleset=💸 提法币,https://raw.githubusercontent.com/arb989822/bnok/refs/heads/main/cex.list
+
+# 油管专线
+ruleset=📹 油管视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
+
+# 广告与净化
 ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 
-; --- 常规规则 ---
+# 常规规则
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
-ruleset=📹 油管视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ruleset=📲 X电报DC,https://raw.githubusercontent.com/arb989822/demo/refs/heads/main/Telegram.list
 ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
 ruleset=📢 谷歌🇨🇳,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
@@ -63,53 +79,39 @@ ruleset=🎥 奈飞视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
 ruleset=🌏 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+
+# GFWList 主规则
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+
+# 国内直连兜底
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯 全球直连,[]GEOIP,CN
+
+# 漏网之鱼
 ruleset=🐟 漏网之鱼,[]FINAL
 
-; ================= 核心分组（完全保留）=================
-
-custom_proxy_group=💰 币交易所`url-test`(交易)`http://www.gstatic.com/generate_204`30,,50
-custom_proxy_group=📲 X电报DC`fallback`(社交|备用)`http://www.gstatic.com/generate_204`30,,50
-custom_proxy_group=📹 油管视频`load-balance``round-robin`(油管)`http://www.gstatic.com/generate_204`300,50
-custom_proxy_group=💸 提法币`url-test`(法国)`http://www.gstatic.com/generate_204`30,,50
-
-; ================= 精简分组（统一自动选择）=================
-
-custom_proxy_group=♻️ 自动选择`url-test`(法国|美国|日本)`http://www.gstatic.com/generate_204`30,,50
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
-
-; --- 谷歌系列（统一）---
-custom_proxy_group=📢 谷歌`select`[]🚀 节点选择`[]♻️ 自动选择`.*
-custom_proxy_group=📢 谷歌🇨🇳`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`.*
-custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*
+# ====================== 节点分组（30秒自动测速，保持原节点名不变）=====================
+custom_proxy_group=💰 币交易所`url-test`(交易)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=💸 提法币`url-test`(备用)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=📲 X电报DC`url-test`(社交|备用)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=📹 油管视频`load-balance`round-robin`(油管)`http://www.gstatic.com/generate_204`300,50
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*`
+custom_proxy_group=♻️ 自动选择`url-test`(备用|油管|社交)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=📢 谷歌Block`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`.*
-
-; --- 微软 / 苹果 / OpenAI / 游戏 / 奈飞（统一策略）---
+custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*
+custom_proxy_group=📢 谷歌🇨🇳`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`.*
+custom_proxy_group=📢 谷歌`select`[]🚀 节点选择`[]♻️ 自动选择`.*
+custom_proxy_group=Ⓜ️ 微软Bing`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
+custom_proxy_group=Ⓜ️ 微软云盘`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 custom_proxy_group=💬 OpenAi`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 custom_proxy_group=🎥 奈飞视频`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
-
-; --- 国内媒体 / 哔哩哔哩（优先直连）---
 custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`.*
 custom_proxy_group=🌏 国内媒体`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`.*
-
-; --- 国外媒体 ---
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*
-
-; --- 基础分组 ---
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
-custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
-custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
+custom_proxy_group=🛑 广告拦截`select`REJECT
+custom_proxy_group=🍃 应用净化`select`REJECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*
-"""
-
-# 写入文件
-output_path_ini = "/mnt/data/nodnsleakjh91-精简优化版.ini"
-with open(output_path_ini, "w", encoding="utf-8") as f:
-    f.write(optimized_ini_content.strip())
-
-print(f"精简优化版已保存至：{output_path_ini}")
