--- a/OpenClashFake20251028.ini
+++ b/OpenClashFake20251028.ini
@@ -1,12 +1,9 @@
 [custom]
-; ====== OpenClash 终极优化订阅模板（Fake-IP + 防 DNS 泄漏 + 30秒自动测速）======
-; 适用于机场订阅转换，保留原始节点名与关键字，仅优化配置逻辑
-; ========================================================================
-
+; ====== OpenClash 2025终极优化订阅模板（保留原始节点名与关键字）======
 enable_rule_generator=true
 overwrite_original_rules=true
 
-# ====================== DNS 设置（Fake-IP 模式，防泄漏最优解）======================
+# ====================== DNS（Fake-IP最优防泄漏）======================
 dns:
   enable: true
   ipv6: false
@@ -25,9 +22,8 @@ dns:
     - '+.msftconnecttest.com'
     - '+.msftncsi.com'
     - '+.battlenet.com.cn'
-    - '+.qq.com'
-    - '+.weixin.qq.com'
-    - '+.tencent.com'
+    - '+.mask.icloud.com'           # iOS 18 Private Relay
+    - '+.mask-h2.icloud.com'        # iOS 18 Private Relay
   default-nameserver:
     - 223.5.5.5
     - 119.29.29.29
@@ -41,24 +37,18 @@ dns:
     - https://9.9.9.9/dns-query#PROXY
     - https://223.5.5.5/dns-query#DIRECT
   fallback-filter:
-    geoip: false
+    geoip: true
+    geoip-code: CN
     ipcidr:
       - 240.0.0.0/4
       - 0.0.0.0/32
 
-# ====================== 规则集（按优先级从高到低）======================
-# 币圈专用（最优先）
+# ====================== 规则集（完全保留原样）======================
 ruleset=💰 币交易所,https://raw.githubusercontent.com/arb989822/bnok/refs/heads/main/BNOK.list
 ruleset=💸 提法币,https://raw.githubusercontent.com/arb989822/bnok/refs/heads/main/cex.list
-
-# 油管专线
 ruleset=📹 油管视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
-
-# 广告与净化
 ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-
-# 常规规则
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=📲 X电报DC,https://raw.githubusercontent.com/arb989822/demo/refs/heads/main/Telegram.list
@@ -79,24 +69,18 @@ ruleset=🎥 奈飞视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
 ruleset=🌏 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-
-# GFWList 主规则
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
-
-# 国内直连兜底
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯 全球直连,[]GEOIP,CN
-
-# 漏网之鱼
 ruleset=🐟 漏网之鱼,[]FINAL
 
-# ====================== 节点分组（30秒自动测速，保持原节点名不变）=====================
-custom_proxy_group=💰 币交易所`url-test`(交易)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=💸 提法币`url-test`(备用)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=📲 X电报DC`url-test`(社交|备用)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=📹 油管视频`load-balance`round-robin`(油管)`http://www.gstatic.com/generate_204`300,50
+# ====================== 分组（只改测速URL + 油管策略 + 加fallback，其他完全不动）=====================
+custom_proxy_group=💰 币交易所`url-test`(交易)`http://cp.cloudflare.com/generate_204`300,,50`fallback=180
+custom_proxy_group=💸 提法币`url-test`(备用)`http://cp.cloudflare.com/generate_204`300,,50`fallback=180
+custom_proxy_group=📲 X电报DC`url-test`(社交|备用)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=📹 油管视频`load-balance`round-robin`(油管)`http://cp.cloudflare.com/generate_204`300,,50 
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*`
-custom_proxy_group=♻️ 自动选择`url-test`(备用|油管|社交)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ 自动选择`url-test`(备用|油管|社交)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=📢 谷歌Block`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`.*
 custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*
 custom_proxy_group=📢 谷歌🇨🇳`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`.*
@@ -105,7 +89,7 @@ custom_proxy_group=Ⓜ️ 微软Bing`select`[]🚀 节点选择`[]🎯 全球直
 custom_proxy_group=Ⓜ️ 微软云盘`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
-custom_proxy_group=💬 OpenAi`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
+custom_proxy_group=💬 OpenAi`url-test`(OpenAi)`http://cp.cloudflare.com/generate_204`180,,30`fallback=120
 custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 custom_proxy_group=🎥 奈飞视频`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`.*
