--- a/OpenClashFake20251028.ini
+++ b/OpenClashFake20251028.ini
@@ -81,14 +81,14 @@ custom_proxy_group=📲 X电报DC`url-test`(社交|备用)`http://cp.cloudflare.
 custom_proxy_group=📹 油管视频`load-balance`round-robin`(油管)`http://www.gstatic.com/generate_204`300,50
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*`
 custom_proxy_group=♻️ 自动选择`url-test`(备用|油管|社交)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=📢 谷歌Block`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`.*
-custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*
+custom_proxy_group=📢 谷歌Block`url-test`(社交|油管|备用)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=📢 谷歌FCM`url-test`(社交|油管|备用)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=📢 谷歌🇨🇳`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`.*
-custom_proxy_group=📢 谷歌`select`[]🚀 节点选择`[]♻️ 自动选择`.*
-custom_proxy_group=Ⓜ️ 微软Bing`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
-custom_proxy_group=Ⓜ️ 微软云盘`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
-custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
+custom_proxy_group=📢 谷歌`url-test`(社交|油管|备用)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=Ⓜ️ 微软Bing`url-test`(社交|油管|备用)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=Ⓜ️ 微软云盘`url-test`(社交|油管|备用)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=Ⓜ️ 微软服务`url-test`(社交|油管|备用)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🍎 苹果服务`url-test`(社交|油管|备用)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=💬 OpenAi`url-test`(美国|新加坡)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 custom_proxy_group=🎥 奈飞视频`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
