--- a/OpenClashFake20251028.ini
+++ b/OpenClashFake20251028.ini
@@ -78,12 +78,12 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=💰 币交易所`url-test`(交易)`http://cp.cloudflare.com/generate_204`300,,50`fallback=180
 custom_proxy_group=💸 提法币`url-test`(备用)`http://cp.cloudflare.com/generate_204`300,,50`fallback=180
 custom_proxy_group=📲 X电报DC`url-test`(社交|备用)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=📹 油管视频`load-balance`round-robin`(油管)`http://www.gstatic.com/generate_204`300,50
+custom_proxy_group=📹 油管视频`load-balance`round-robin`(油管)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*`
 custom_proxy_group=♻️ 自动选择`url-test`(备用|美国|社交)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=📢 谷歌Block`url-test`(社交|美国|备用)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=📢 谷歌FCM`url-test`(社交|美国|备用)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=📢 谷歌🇨🇳`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`.*
+custom_proxy_group=📢 谷歌🇨🇳`url-test`(社交|美国|备用)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=📢 谷歌`url-test`(社交|美国|备用)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=Ⓜ️ 微软Bing`url-test`(社交|美国|备用)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=Ⓜ️ 微软云盘`url-test`(社交|美国|备用)`http://cp.cloudflare.com/generate_204`300,,50
