--- a/OpenClashFake20251028.ini
+++ b/OpenClashFake20251028.ini
@@ -75,21 +75,21 @@ ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
 # ====================== 分组（只改测速URL + 油管策略 + 加fallback，其他完全不动）=====================
-custom_proxy_group=💰 币交易所`url-test`(交易)`http://cp.cloudflare.com/generate_204`300,,50`fallback=180
-custom_proxy_group=💸 提法币`url-test`(备用)`http://cp.cloudflare.com/generate_204`300,,50`fallback=180
-custom_proxy_group=📲 X电报DC`url-test`(社交|备用)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=📹 油管视频`load-balance`round-robin`(油管)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=💰 币交易所`url-test`(交易)`http://www.gstatic.com/generate_204`300,50
+custom_proxy_group=💸 提法币`url-test`(备用)`http://www.gstatic.com/generate_204`300,50
+custom_proxy_group=📲 X电报DC`url-test`(社交|备用)`http://www.gstatic.com/generate_204`300,50
+custom_proxy_group=📹 油管视频`load-balance`round-robin`(油管)`http://www.gstatic.com/generate_204`300,50
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*`
-custom_proxy_group=♻️ 自动选择`url-test`(备用|美国|社交)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=📢 谷歌Block`url-test`(社交|美国|备用)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=📢 谷歌FCM`url-test`(社交|美国|备用)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=📢 谷歌🇨🇳`url-test`(社交|美国|备用)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=📢 谷歌`url-test`(社交|美国|备用)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=Ⓜ️ 微软Bing`url-test`(社交|美国|备用)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=Ⓜ️ 微软云盘`url-test`(社交|美国|备用)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=Ⓜ️ 微软服务`url-test`(社交|美国|备用)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🍎 苹果服务`url-test`(社交|美国|备用)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=💬 OpenAi`url-test`(美国|新加坡)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=♻️ 自动选择`url-test`(备用|美国|社交)`http://www.gstatic.com/generate_204`300,50
+custom_proxy_group=📢 谷歌Block`url-test`(社交|美国|备用)`http://www.gstatic.com/generate_204`300,50
+custom_proxy_group=📢 谷歌FCM`url-test`(社交|美国|备用)`http://www.gstatic.com/generate_204`300,50
+custom_proxy_group=📢 谷歌🇨🇳`url-test`(社交|美国|备用)`http://www.gstatic.com/generate_204`300,50
+custom_proxy_group=📢 谷歌`url-test`(社交|美国|备用)`http://www.gstatic.com/generate_204`300,50
+custom_proxy_group=Ⓜ️ 微软Bing`url-test`(社交|美国|备用)`http://www.gstatic.com/generate_204`300,50
+custom_proxy_group=Ⓜ️ 微软云盘`url-test`(社交|美国|备用)`http://www.gstatic.com/generate_204`300,50
+custom_proxy_group=Ⓜ️ 微软服务`url-test`(社交|美国|备用)`http://www.gstatic.com/generate_204`300,50
+custom_proxy_group=🍎 苹果服务`url-test`(社交|美国|备用)`http://www.gstatic.com/generate_204`300,50
+custom_proxy_group=💬 OpenAi`url-test`(美国|新加坡)`http://www.gstatic.com/generate_204`300,50
 custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 custom_proxy_group=🎥 奈飞视频`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`.*
