--- a/OpenClashFake20251028.ini
+++ b/OpenClashFake20251028.ini
@@ -78,7 +78,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=💰 币交易所`url-test`(交易)`http://cp.cloudflare.com/generate_204`180,,50`150
 custom_proxy_group=💸 提法币`url-test`(备用)`http://cp.cloudflare.com/generate_204`180,,50`150
 custom_proxy_group=📲 X电报DC`url-test`(社交|备用)`http://cp.cloudflare.com/generate_204`180,,50`150
-custom_proxy_group=📹 油管视频`load-balance`(油管)`strategy=round-robin`http://cp.cloudflare.com/generate_204`180,,50
+custom_proxy_group=📹 油管视频`load-balance`round-robin`(油管)`http://cp.cloudflare.com/generate_204`180,,50
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*` # 主选自动
 custom_proxy_group=♻️ 自动选择`url-test`(备用|美国|社交)`http://cp.cloudflare.com/generate_204`180,,50`150
 custom_proxy_group=📢 谷歌Block`url-test`(社交|美国|备用)`http://cp.cloudflare.com/generate_204`180,,50`150
